--- a/package.json
+++ b/package.json
@@ -12,24 +12,26 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
+    "express-slow-down": "^2.0.3",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "http-graceful-shutdown": "^3.1.14",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mongodb": "^5.9.2",
     "mysql2": "^3.14.0",
+    "nocache": "^4.0.0",
     "nodemon": "^3.1.9",
-    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typedi": "^0.10.0",
-    "typeorm": "0.3.22",
-    "typeorm-typedi-extensions": "^0.4.1",
-    "typescript": "^5.8.3"
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
@@ -38,16 +40,14 @@
     "@types/dotenv": "^8.2.3",
     "@types/eslint": "^9.6.1",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
+    "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/moment": "^2.13.0",
     "@types/node": "^22.14.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint": "^9.24.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   }
 }
