--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ JWT_SECRET_KEY =
 SESSION_SECRET_KEY =
 
 # DATABASE ENVIRONMENT
+DATABASE_CLIENT = 
 DATABASE_HOST = 
 DATABASE_PORT = 
 DATABASE_NAME = 
