--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,48 @@
 {
-  "parser": "@typescript-eslint/parser",
+  "extends": ["prettier", "airbnb-base", "plugin:prettier/recommended"],
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": 12
   },
-  "extends": ["standard", "plugin:eslint-plugin/recommended"],
-  "plugins": [],
+  "env": {
+    "es6": true,
+    "node": true
+  },
   "rules": {
-    "space-before-function-paren": 0,
-    "no-throw-literal": 0,
-    "prefer-promise-reject-errors": 0,
-    "dot-notation": 0,
-    "prefer-const": 0,
-    "no-console": 1,
-    "quotes": 0,
-    "array-callback-return": 0,
-    "eqeqeq": 0,
-    "no-unneeded-ternary": 0,
+    "no-console": 0,
     "indent": 0,
-    "no-useless-constructor": 0,
-    "no-sparse-arrays": 0,
-    "no-prototype-builtins": 0,
-    "mocha/no-hooks-for-single-case": 0,
-    "quote-props": 0,
-    "chai-friendly/no-unused-expressions": 0,
-    "no-async-promise-executor": 0
-  }
+    "linebreak-style": 0,
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "es5",
+        "singleQuote": true,
+        "printWidth": 125,
+        "tabWidth": 4,
+        "semi": true
+      }
+    ],
+    "import/extensions": [
+      {
+        "js": "always"
+      }
+    ],
+    "no-underscore-dangle": [
+      "error",
+      { "allow": ["_id", "__filename", "__dirname"] }
+    ],
+    "no-unused-vars": ["error", { "args": "none" }],
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "only-multiline",
+        "objects": "only-multiline",
+        "imports": "never",
+        "exports": "never",
+        "functions": "never"
+      }
+    ],
+    "func-names": "off",
+    "consistent-return": "off"
+  },
+  "plugins": ["prettier"]
 }
