--- a/package.json
+++ b/package.json
@@ -1,53 +1,40 @@
 {
   "name": "rest-clean-architecture",
-  "description": "A REST API application using Express, Typescript and Prisma(ORM)",
+  "description": "A REST API application using Express and Typeorm",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon app.ts",
-    "start": "ts-node src/index.ts"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
-    "express-session": "^1.18.1",
     "express-slow-down": "^2.0.3",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "http-graceful-shutdown": "^3.1.14",
-    "jsonwebtoken": "^9.0.2",
-    "moment": "^2.30.1",
+    "http-status-codes": "^2.3.0",
     "mysql2": "^3.14.0",
     "nocache": "^4.0.0",
-    "nodemon": "^3.1.9",
     "reflect-metadata": "^0.2.2",
-    "ts-node": "^10.9.2",
-    "typedi": "^0.10.0",
-    "typeorm": "^0.3.22"
+    "typeorm": "^0.3.22",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^3.0.0",
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.3",
-    "@types/eslint": "^9.6.1",
-    "@types/express": "^5.0.1",
-    "@types/express-session": "^1.18.1",
-    "@types/hpp": "^0.2.6",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^22.14.0",
-    "eslint": "^9.24.0",
-    "prettier": "^3.5.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "@eslint/js": "^9.25.1",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3"
   }
 }
