--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-slow-down": "^2.0.3",
+    "express-xss-sanitizer": "^2.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "http-graceful-shutdown": "^3.1.14",
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.14.0",
     "nocache": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.22",
     "winston": "^3.17.0"
