--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hpp": "^0.2.3",
     "http-graceful-shutdown": "^3.1.14",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.13.3",
     "mysql2": "^3.14.0",
     "nocache": "^4.0.0",
     "passport": "^0.7.0",
