Add employee portal registration controller

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@
 PORT =
 NODE_ENV =
 URL =
+
 JWT_SECRET_KEY =
-SESSION_SECRET_KEY =
+JWT_EXPIRES_IN = 
 
 # DATABASE ENVIRONMENT
 DATABASE_CLIENT = 
