--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "dev:pm2": "pm2 start server.js --watch --ignore-watch='node_modules logs'",
+    "start": "pm2 start server.js"
   },
   "keywords": [],
   "author": "",
