--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "dev:pm2": "pm2 start server.js --watch --ignore-watch='node_modules logs'",
-    "start": "pm2 start server.js"
+    "dev:pm2": "pm2 start server.js --watch --ignore-watch='node_modules logs' --name rest-api",
+    "start": "pm2 start server.js --name rest-api"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,7 @@
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.14.0",
     "nocache": "^4.0.0",
     "passport": "^0.7.0",
