--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-.idea/
-.vscode/
+# Node.js dependencies
 node_modules/
-build/
-tmp/
-temp/
+
+# Environment variables
 .env
-logs/*
+
+# Logs
+logs/
+
+
+# IDEs and editors
+.vscode/
+.idea/
+
+# Build output
+dist/
+build/
+coverage/
