--- a/package.json
+++ b/package.json
@@ -5,54 +5,42 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
-    "dev:pm2": "pm2 start server.js --watch --ignore-watch='node_modules logs' --name rest-api",
-    "start": "pm2 start server.js --name rest-api"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.27.1",
     "bcryptjs": "^3.0.2",
-    "compression": "^1.8.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^17.2.0",
+    "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^7.5.0",
-    "express-slow-down": "^2.0.3",
+    "express-rate-limit": "^8.0.1",
+    "express-slow-down": "^2.1.0",
     "express-xss-sanitizer": "^2.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "http-graceful-shutdown": "^3.1.14",
-    "http-status-codes": "^2.3.0",
+    "http-status-code": "^2.1.0",
     "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "mysql2": "^3.14.0",
+    "morgan": "^1.10.1",
+    "mysql2": "^3.14.2",
     "nocache": "^4.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.22",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining-assign": "^7.27.1",
-    "@babel/plugin-transform-runtime": "^7.27.1",
-    "@babel/preset-env": "^7.27.2",
-    "@eslint/js": "^9.25.1",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.57.1",
+    "@eslint/js": "^9.31.0",
+    "drizzle-kit": "^0.31.4",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.6",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.5.3",
-    "supertest": "^7.1.0"
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
